tests/machine/x/c/record_assign.error
line: 0
error: output mismatch
-- got --
1.011846442682873e-320
-- want --
1
   1: #include <stdio.h>
